data/derived/comb/progs/unify/prog2003.ml.out
Characters 405-420:
  | Power (e1,e2) -> eval (e1,x,y) ** abs (eval (e2,x,y))
                                          ^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
